apps/praetor/webhook-adapter/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: praetor-webhook-adapter
  namespace: praetor
spec:
  replicas: 1
  selector:
    matchLabels:
      app: praetor-webhook-adapter
  strategy:
    type: RollingUpdate
    rollingUpdate:
      maxUnavailable: 0
      maxSurge: 1
  template:
    metadata:
      annotations:
        reloader.stakater.com/auto: "true"
      labels:
        app: praetor-webhook-adapter
    spec:
      nodeSelector:
        kubernetes.io/arch: amd64
      serviceAccountName: praetor-webhook-adapter
      containers:
        - name: webhook-adapter
          image: amerenda/praetor-webhook:sha-39a1f93
          imagePullPolicy: Always
          ports:
            - containerPort: 8080
          livenessProbe:
            httpGet:
              path: /healthz
              port: 8080
            initialDelaySeconds: 10
            periodSeconds: 30
          readinessProbe:
            httpGet:
              path: /healthz
              port: 8080
            initialDelaySeconds: 5
            periodSeconds: 10
          resources:
            requests:
              cpu: 50m
              memory: 128Mi
            limits:
              cpu: 200m
              memory: 256Mi
