apps/praetor/webhook-adapter/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: praetor-webhook-adapter
  namespace: praetor
spec:
  selector:
    app: praetor-webhook-adapter
  ports:
    - port: 80
      targetPort: 8080
      protocol: TCP
